# magic_q_backuper

./: Cargo.toml  mq_backuper_config.json
src/: main.rs
src/cmdline/: mod.rs
src/config/: mod.rs
src/console/: mod.rs
src/copy/: mod.rs
src/error/: mod.rs
src/local_installation/: mod.rs
src/local_pc/: mod.rs
src/systems/: mod.rs
src/tui/: mod.rs
src/zip/: mod.rs
src/zip_name/: mod.rs
