[package]
name = "mq_backuper"
version = "0.1.0"
authors = ["michaelhugi <michael.hugi@informaticon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#termcolor = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.21"
zip = "0.5.13"
chrono = "0.4"